// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component ContributorRow  Row should be clickable when showContributorAssignment set to true 1`] = `
<React.Fragment>
  <ConfirmDialogBox
    hideCancelButton={false}
    locale={
      Object {
        "cancelButtonLabel": "No",
        "confirmButtonLabel": "Yes",
        "confirmationMessage": "Are you sure you want to delete this record?",
        "confirmationTitle": "Delete record",
      }
    }
    onAction={[Function]}
    onRef={[Function]}
  />
  <WithStyles(ListItem)
    aria-label="Select this record (J. Smith) to assign it to you"
    classes={
      Object {
        "root": "",
      }
    }
    divider={true}
    onClick={[Function]}
    onKeyDown={[Function]}
    style={
      Object {
        "cursor": "pointer",
      }
    }
  >
    <WithStyles(ListItemIcon)
      classes={
        Object {
          "root": " ",
        }
      }
    >
      <pure(PersonOutlined) />
    </WithStyles(ListItemIcon)>
    <WithStyles(ListItemText)
      disableTypography={true}
      primary={
        <WithStyles(Typography)
          classes={
            Object {
              "root": "primary ",
            }
          }
          noWrap={true}
          variant="body1"
        >
          J. Smith
        </WithStyles(Typography)>
      }
      secondary={
        <WithStyles(Typography)
          classes={
            Object {
              "root": "",
            }
          }
          noWrap={true}
          variant="caption"
        >
          First  listed contributor
        </WithStyles(Typography)>
      }
    />
    <WithStyles(ListItemSecondaryAction)>
      <WithStyles(Tooltip)
        title="Remove this record"
      >
        <IconButton
          aria-label="Remove this record"
          disableTouchRipple={false}
          disabled={false}
          iconStyle={Object {}}
          onClick={[Function]}
          tooltipPosition="bottom-center"
          touch={false}
        >
          <pure(Delete)
            classes={
              Object {
                "root": "",
              }
            }
          />
        </IconButton>
      </WithStyles(Tooltip)>
    </WithStyles(ListItemSecondaryAction)>
  </WithStyles(ListItem)>
</React.Fragment>
`;

exports[`Component ContributorRow  Row should not be clickable when showContributorAssignment set to false 1`] = `
<React.Fragment>
  <ConfirmDialogBox
    hideCancelButton={false}
    locale={
      Object {
        "cancelButtonLabel": "No",
        "confirmButtonLabel": "Yes",
        "confirmationMessage": "Are you sure you want to delete this record?",
        "confirmationTitle": "Delete record",
      }
    }
    onAction={[Function]}
    onRef={[Function]}
  />
  <WithStyles(ListItem)
    aria-label="Select this record (J. Smith) to assign it to you"
    classes={
      Object {
        "root": "",
      }
    }
    divider={true}
    onClick={[Function]}
    onKeyDown={[Function]}
    style={
      Object {
        "cursor": "pointer",
      }
    }
  >
    <WithStyles(ListItemIcon)
      classes={
        Object {
          "root": " ",
        }
      }
    >
      <pure(PersonOutlined) />
    </WithStyles(ListItemIcon)>
    <WithStyles(ListItemText)
      disableTypography={true}
      primary={
        <WithStyles(Typography)
          classes={
            Object {
              "root": "primary ",
            }
          }
          noWrap={true}
          variant="body1"
        >
          J. Smith
        </WithStyles(Typography)>
      }
      secondary={
        <WithStyles(Typography)
          classes={
            Object {
              "root": "",
            }
          }
          noWrap={true}
          variant="caption"
        >
          First  listed contributor
        </WithStyles(Typography)>
      }
    />
    <WithStyles(ListItemSecondaryAction)>
      <WithStyles(Tooltip)
        title="Remove this record"
      >
        <IconButton
          aria-label="Remove this record"
          disableTouchRipple={false}
          disabled={false}
          iconStyle={Object {}}
          onClick={[Function]}
          tooltipPosition="bottom-center"
          touch={false}
        >
          <pure(Delete)
            classes={
              Object {
                "root": "",
              }
            }
          />
        </IconButton>
      </WithStyles(Tooltip)>
    </WithStyles(ListItemSecondaryAction)>
  </WithStyles(ListItem)>
</React.Fragment>
`;

exports[`Component ContributorRow  a row with index and contributor set, renders only name and delete button 1`] = `
<React.Fragment>
  <ConfirmDialogBox
    hideCancelButton={false}
    locale={
      Object {
        "cancelButtonLabel": "No",
        "confirmButtonLabel": "Yes",
        "confirmationMessage": "Are you sure you want to delete this record?",
        "confirmationTitle": "Delete record",
      }
    }
    onAction={[Function]}
    onRef={[Function]}
  />
  <WithStyles(ListItem)
    aria-label="Select this record (A. Smith) to assign it to you"
    classes={
      Object {
        "root": "",
      }
    }
    divider={true}
    onClick={[Function]}
    onKeyDown={[Function]}
    style={
      Object {
        "cursor": "pointer",
      }
    }
  >
    <WithStyles(ListItemIcon)
      classes={
        Object {
          "root": " ",
        }
      }
    >
      <pure(PersonOutlined) />
    </WithStyles(ListItemIcon)>
    <WithStyles(ListItemText)
      disableTypography={true}
      primary={
        <WithStyles(Typography)
          classes={
            Object {
              "root": "primary ",
            }
          }
          noWrap={true}
          variant="body1"
        >
          A. Smith
        </WithStyles(Typography)>
      }
      secondary={
        <WithStyles(Typography)
          classes={
            Object {
              "root": "",
            }
          }
          noWrap={true}
          variant="caption"
        >
          First  listed contributor
        </WithStyles(Typography)>
      }
    />
    <WithStyles(ListItemSecondaryAction)>
      <WithStyles(Tooltip)
        title="Remove this record"
      >
        <IconButton
          aria-label="Remove this record"
          disableTouchRipple={false}
          disabled={false}
          iconStyle={Object {}}
          onClick={[Function]}
          tooltipPosition="bottom-center"
          touch={false}
        >
          <pure(Delete)
            classes={
              Object {
                "root": "",
              }
            }
          />
        </IconButton>
      </WithStyles(Tooltip)>
    </WithStyles(ListItemSecondaryAction)>
  </WithStyles(ListItem)>
</React.Fragment>
`;

exports[`Component ContributorRow  a row with index and contributor set, renders only name and delete button for mobile view 1`] = `
<React.Fragment>
  <ConfirmDialogBox
    hideCancelButton={false}
    locale={
      Object {
        "cancelButtonLabel": "No",
        "confirmButtonLabel": "Yes",
        "confirmationMessage": "Are you sure you want to delete this record?",
        "confirmationTitle": "Delete record",
      }
    }
    onAction={[Function]}
    onRef={[Function]}
  />
  <WithStyles(ListItem)
    aria-label="Select this record (A. Smith) to assign it to you"
    classes={
      Object {
        "root": "",
      }
    }
    divider={true}
    onClick={[Function]}
    onKeyDown={[Function]}
    style={
      Object {
        "cursor": "pointer",
      }
    }
  >
    <WithStyles(ListItemIcon)
      classes={
        Object {
          "root": "hideIcon ",
        }
      }
    >
      <pure(PersonOutlined) />
    </WithStyles(ListItemIcon)>
    <WithStyles(ListItemText)
      disableTypography={true}
      primary={
        <WithStyles(Typography)
          classes={
            Object {
              "root": "primary ",
            }
          }
          noWrap={true}
          variant="body1"
        >
          A. Smith
        </WithStyles(Typography)>
      }
      secondary={
        <WithStyles(Typography)
          classes={
            Object {
              "root": "",
            }
          }
          noWrap={true}
          variant="caption"
        >
          First  listed contributor
        </WithStyles(Typography)>
      }
    />
    <WithStyles(ListItemSecondaryAction)>
      <WithStyles(Tooltip)
        title="Remove this record"
      >
        <IconButton
          aria-label="Remove this record"
          disableTouchRipple={false}
          disabled={false}
          iconStyle={Object {}}
          onClick={[Function]}
          tooltipPosition="bottom-center"
          touch={false}
        >
          <pure(Delete)
            classes={
              Object {
                "root": "",
              }
            }
          />
        </IconButton>
      </WithStyles(Tooltip)>
    </WithStyles(ListItemSecondaryAction)>
  </WithStyles(ListItem)>
</React.Fragment>
`;

exports[`Component ContributorRow  a row with index and contributor set, renders reorder buttons, contributor assignment, and delete button 1`] = `
<React.Fragment>
  <ConfirmDialogBox
    hideCancelButton={false}
    locale={
      Object {
        "cancelButtonLabel": "No",
        "confirmButtonLabel": "Yes",
        "confirmationMessage": "Are you sure you want to delete this record?",
        "confirmationTitle": "Delete record",
      }
    }
    onAction={[Function]}
    onRef={[Function]}
  />
  <WithStyles(ListItem)
    aria-label="Select this record (J. Smith) to assign it to you"
    classes={
      Object {
        "root": "",
      }
    }
    divider={true}
    onClick={[Function]}
    onKeyDown={[Function]}
    style={
      Object {
        "cursor": "pointer",
      }
    }
  >
    <WithStyles(ListItemIcon)
      classes={
        Object {
          "root": " ",
        }
      }
    >
      <pure(PersonOutlined) />
    </WithStyles(ListItemIcon)>
    <WithStyles(ListItemText)
      disableTypography={true}
      primary={
        <WithStyles(Typography)
          classes={
            Object {
              "root": "primary ",
            }
          }
          noWrap={true}
          variant="body1"
        >
          J. Smith
        </WithStyles(Typography)>
      }
      secondary={
        <WithStyles(Typography)
          classes={
            Object {
              "root": "",
            }
          }
          noWrap={true}
          variant="caption"
        >
          First  listed contributor
        </WithStyles(Typography)>
      }
    />
    <WithStyles(ListItemSecondaryAction)>
      <WithStyles(Tooltip)
        title="Move record up the order"
      >
        <IconButton
          aria-label="Move record up the order"
          disableTouchRipple={false}
          disabled={false}
          iconStyle={Object {}}
          onClick={[Function]}
          tooltipPosition="bottom-center"
          touch={false}
        >
          <pure(KeyboardArrowUp)
            classes={
              Object {
                "root": "",
              }
            }
          />
        </IconButton>
      </WithStyles(Tooltip)>
      <WithStyles(Tooltip)
        title="Move record down the order"
      >
        <IconButton
          aria-label="Move record down the order"
          disableTouchRipple={false}
          disabled={false}
          iconStyle={Object {}}
          onClick={[Function]}
          tooltipPosition="bottom-center"
          touch={false}
        >
          <pure(KeyboardArrowDown)
            classes={
              Object {
                "root": "",
              }
            }
          />
        </IconButton>
      </WithStyles(Tooltip)>
      <WithStyles(Tooltip)
        title="Remove this record"
      >
        <IconButton
          aria-label="Remove this record"
          disableTouchRipple={false}
          disabled={false}
          iconStyle={Object {}}
          onClick={[Function]}
          tooltipPosition="bottom-center"
          touch={false}
        >
          <pure(Delete)
            classes={
              Object {
                "root": "",
              }
            }
          />
        </IconButton>
      </WithStyles(Tooltip)>
    </WithStyles(ListItemSecondaryAction)>
  </WithStyles(ListItem)>
</React.Fragment>
`;

exports[`Component ContributorRow  a row with index and contributor with author details set and set as selected 1`] = `
<React.Fragment>
  <ConfirmDialogBox
    hideCancelButton={false}
    locale={
      Object {
        "cancelButtonLabel": "No",
        "confirmButtonLabel": "Yes",
        "confirmationMessage": "Are you sure you want to delete this record?",
        "confirmationTitle": "Delete record",
      }
    }
    onAction={[Function]}
    onRef={[Function]}
  />
  <WithStyles(ListItem)
    aria-label="Select this record (J. Smith) to assign it to you"
    classes={
      Object {
        "root": "selected",
      }
    }
    divider={true}
    onClick={[Function]}
    onKeyDown={[Function]}
    style={
      Object {
        "cursor": "pointer",
      }
    }
  >
    <WithStyles(ListItemIcon)
      classes={
        Object {
          "root": " selected",
        }
      }
    >
      <pure(Person) />
    </WithStyles(ListItemIcon)>
    <WithStyles(ListItemText)
      disableTypography={true}
      primary={
        <WithStyles(Typography)
          classes={
            Object {
              "root": "primary selected",
            }
          }
          noWrap={true}
          variant="body1"
        >
          J. Smith
        </WithStyles(Typography)>
      }
      secondary={
        <WithStyles(Typography)
          classes={
            Object {
              "root": "selected",
            }
          }
          noWrap={true}
          variant="caption"
        >
          First  listed contributor
        </WithStyles(Typography)>
      }
    />
    <WithStyles(ListItemSecondaryAction)>
      <WithStyles(Tooltip)
        title="Remove this record"
      >
        <IconButton
          aria-label="Remove this record"
          disableTouchRipple={false}
          disabled={false}
          iconStyle={Object {}}
          onClick={[Function]}
          tooltipPosition="bottom-center"
          touch={false}
        >
          <pure(Delete)
            classes={
              Object {
                "root": "selected",
              }
            }
          />
        </IconButton>
      </WithStyles(Tooltip)>
    </WithStyles(ListItemSecondaryAction)>
  </WithStyles(ListItem)>
</React.Fragment>
`;

exports[`Component ContributorRow  a row with index and contributor with author details set and set as selected for mobile view 1`] = `
<React.Fragment>
  <ConfirmDialogBox
    hideCancelButton={false}
    locale={
      Object {
        "cancelButtonLabel": "No",
        "confirmButtonLabel": "Yes",
        "confirmationMessage": "Are you sure you want to delete this record?",
        "confirmationTitle": "Delete record",
      }
    }
    onAction={[Function]}
    onRef={[Function]}
  />
  <WithStyles(ListItem)
    aria-label="Select this record (J. Smith) to assign it to you"
    classes={
      Object {
        "root": "selected",
      }
    }
    divider={true}
    onClick={[Function]}
    onKeyDown={[Function]}
    style={
      Object {
        "cursor": "pointer",
      }
    }
  >
    <WithStyles(ListItemIcon)
      classes={
        Object {
          "root": " selected",
        }
      }
    >
      <pure(Person) />
    </WithStyles(ListItemIcon)>
    <WithStyles(ListItemText)
      disableTypography={true}
      primary={
        <WithStyles(Typography)
          classes={
            Object {
              "root": "primary selected",
            }
          }
          noWrap={true}
          variant="body1"
        >
          J. Smith
        </WithStyles(Typography)>
      }
      secondary={
        <WithStyles(Typography)
          classes={
            Object {
              "root": "selected",
            }
          }
          noWrap={true}
          variant="caption"
        >
          First  listed contributor
        </WithStyles(Typography)>
      }
    />
    <WithStyles(ListItemSecondaryAction)>
      <WithStyles(Tooltip)
        title="Remove this record"
      >
        <IconButton
          aria-label="Remove this record"
          disableTouchRipple={false}
          disabled={false}
          iconStyle={Object {}}
          onClick={[Function]}
          tooltipPosition="bottom-center"
          touch={false}
        >
          <pure(Delete)
            classes={
              Object {
                "root": "selected",
              }
            }
          />
        </IconButton>
      </WithStyles(Tooltip)>
    </WithStyles(ListItemSecondaryAction)>
  </WithStyles(ListItem)>
</React.Fragment>
`;

exports[`Component ContributorRow  a row with index and contributor with author details set, contributor author details, and delete button 1`] = `
<React.Fragment>
  <ConfirmDialogBox
    hideCancelButton={false}
    locale={
      Object {
        "cancelButtonLabel": "No",
        "confirmButtonLabel": "Yes",
        "confirmationMessage": "Are you sure you want to delete this record?",
        "confirmationTitle": "Delete record",
      }
    }
    onAction={[Function]}
    onRef={[Function]}
  />
  <WithStyles(ListItem)
    aria-label="Select this record (J. Smith) to assign it to you"
    classes={
      Object {
        "root": "",
      }
    }
    divider={true}
    onClick={[Function]}
    onKeyDown={[Function]}
    style={
      Object {
        "cursor": "pointer",
      }
    }
  >
    <WithStyles(ListItemIcon)
      classes={
        Object {
          "root": " ",
        }
      }
    >
      <pure(PersonOutlined) />
    </WithStyles(ListItemIcon)>
    <WithStyles(Grid)
      classes={
        Object {
          "container": "listItem",
        }
      }
      container={true}
    >
      <WithStyles(Grid)
        item={true}
        md={5}
        sm={5}
        xs={10}
      >
        <WithStyles(ListItemText)
          disableTypography={true}
          primary={
            <WithStyles(Typography)
              classes={
                Object {
                  "root": "primary ",
                }
              }
              noWrap={true}
              variant="body1"
            >
              J. Smith
            </WithStyles(Typography)>
          }
          secondary={
            <WithStyles(Typography)
              classes={
                Object {
                  "root": "",
                }
              }
              noWrap={true}
              variant="caption"
            >
              First  listed contributor
            </WithStyles(Typography)>
          }
        />
      </WithStyles(Grid)>
      <WithStyles(Grid)
        item={true}
        md={5}
        sm={5}
        xs={10}
      >
        <WithStyles(ListItemText)
          disableTypography={true}
          primary={
            <WithStyles(Typography)
              classes={
                Object {
                  "root": "primary ",
                }
              }
              noWrap={true}
              variant="body1"
            >
              Mr Christopher Christoff
            </WithStyles(Typography)>
          }
          secondary={
            <WithStyles(Typography)
              classes={
                Object {
                  "root": " ",
                }
              }
              noWrap={true}
              variant="caption"
            >
              null
            </WithStyles(Typography)>
          }
        />
      </WithStyles(Grid)>
    </WithStyles(Grid)>
    <WithStyles(ListItemSecondaryAction)>
      <WithStyles(Tooltip)
        title="Remove this record"
      >
        <IconButton
          aria-label="Remove this record"
          disableTouchRipple={false}
          disabled={false}
          iconStyle={Object {}}
          onClick={[Function]}
          tooltipPosition="bottom-center"
          touch={false}
        >
          <pure(Delete)
            classes={
              Object {
                "root": "",
              }
            }
          />
        </IconButton>
      </WithStyles(Tooltip)>
    </WithStyles(ListItemSecondaryAction)>
  </WithStyles(ListItem)>
</React.Fragment>
`;
